todolistCSS.css
/* css sheet for javascript to do list */

body { 
    margin: 10px auto;
    min-width: 250px;
    max-width: 50%;
    background-color:lightgray;
}

* {
    box-sizing: border-box;
}

ul {
    margin: 0;
    padding: 0;
}

ul li {
    cursor: pointer;
    position: relative;
    padding: 12px 8px 12px 40px;
    list-style-type: none;
    background:white;
    border: solid .5px;
    border-color:lightgrey;
    font-size: 20px;
    transition: 0.2s; /* what is transition? */   

    /* allow list items to be deselected */
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* close button stylized */
.close {
    position: absolute;
    right: 0;
    top: 0;
    padding: 12px 16px 12px 16px;
    color: blue;
}

.close:hover {
    background-color:lavender;
    color:black;
    text-align: center;
}
.header:after {
    content: "";
    display: table;
    clear: both;
}

.header {
  text-align:justify;
  text-decoration:none;
  margin: 0 auto;
}

input {
    margin: 0;
    border: none;
    border-radius: 0px;
    border-style: solid;
    border-width:2px;
    border-color:maroon;
    width: 75%;
    padding: 15px;
    margin-bottom:20px;
    float: left;
    font-size: 18px;
}
input:hover {
  background-color:beige;
  opacity:90%;
}

.addBtn {
    padding: 18px;
    width: 25%;
    background:maroon;
    color:white;
    float: left;
    text-align: center;
    font-weight: bold;
    font-size: 20px;
    cursor: pointer;
    transition: 0.2s;
    border-radius: 0;
}

.addBtn:hover {
    background:navy;
    color:white;
}

#clear-list {
    width: 30%;
    font-weight: bold;
    font-style: normal;
    font-size: xx-large;
    font-family: "Arial";
    margin: 20px 35%;
    background:maroon;
    color:white;
    cursor: pointer;
}
#clear-list:hover {
    background-color:navy;
    color:white;
}

